@@ -106,6 +106,7 @@ Features:
  - Switch: Rotation support
  - Qt: State file load/save menu options
  - Windows installer
+ - Tile viewer now has adjustable width
 Bugfixes:
  - PSP2: Fix audio crackling after fast forward
  - PSP2: Fix audio crackling when buffer is full
